crates/pyrogen_checker/src/snapshots/pyrogen_checker__type_ignore__tests__noqa_all_leading_comment.snap
---
source: crates/pyrogen_checker/src/type_ignore.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        All(
            All {
                range: 32..46,
            },
        ),
    ),
)
