crates/pyrogen_checker/src/snapshots/pyrogen_checker__type_ignore__tests__noqa_all_no_space.snap
---
source: crates/pyrogen_checker/src/type_ignore.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        All(
            All {
                range: 0..12,
            },
        ),
    ),
)
